--- a/cookbook/examples/floating-color-palettes/index.html
+++ b/cookbook/examples/floating-color-palettes/index.html
@@ -4,19 +4,31 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Floating Color Palettes | Exercise Example</title>
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="color-palette-1">
+        <div class="color-palette">
             <h2>Verdant Dream</h2>
-            <div id="color-1">
-                <h4>#4B7F52</h4>
-            </div>
-            <div id="color-2">
-                <h4>#7DD181</h4>
-            </div>
-            <div id="color-3">
-                <h4>#B6F9C9</h4>
-            </div>
+            <h4 class="color" id="color-1">#4B7F52</h4>
+            <h4 class="color" id="color-2">#7DD181</h4>
+            <h4 class="color" id="color-3">#B6F9C9</h4>
         </div>
+
+        <div class="color-palette">
+            <h2>Party at Dusk</h2>
+            <h4 class="color" id="color-4">#820263</h4>
+            <h4 class="color" id="color-5">#D90368</h4>
+            <h4 class="color" id="color-6">#EADEDA</h4>
+            <h4 class="color" id="color-7">#2E294E</h4>
+            <h4 class="color" id="color-8">#FFD400</h4>
+        </div>
+
+        <div class="color-palette">
+            <h2>Mint Chocolate</h2>
+            <h4 class="color" id="color-9">#B5D6B2</h4>
+            <h4 class="color" id="color-10">#53131E</h4>
+            <h4 class="color" id="color-11">#5A464C</h4>
+        </div>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
