--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 28th</h1>
-            <h3>Week 23 Day 1 (Intro to CSS)</h3>
+            <h1>GDWD 105 - Agenda for August 29th</h1>
+            <h3>Week 23 Day 2 (Intro to CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite color?</li>
+                        <li>What is one of your favorite DreamWorks movies?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/painter-fox.jpg"
-                            alt="painter fox"
+                            src="images/httyd.jpg"
+                            alt="how to train your dragon"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Intermediate HTML</li>
-                        <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
+                        <li><span class="type">Exercise</span>The 10 Trials of Basic CSS</li>
                     </ul>
                 </div>
 
@@ -34,23 +33,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intermediate HTML</li>
-                            <li><span class="type">PowerPoint</span>Intro to CSS and CSS Properties</li>
+                            <li><span class="type">Kahoot</span>Document Flow and HTML Elements</li>
+                            <li><span class="type">PowerPoint</span>Clean Code - Part 3</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to CSS and CSS Properties [cont.]</li>
-                            <li><span class="type">Demo</span>Spans, Color, and Background Color in CSS</li>
+                            <li><span class="type">Demo</span>Text-related CSS Properties</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
+                            <li><span class="type">Exercise</span>The 10 Trials of Basic CSS</li>
                         </ul>
                     </div>
                 </div>
