--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 29th</h1>
-            <h3>Week 23 Day 2 (Intro to CSS)</h3>
+            <h1>GDWD 105 - Agenda for September 2nd</h1>
+            <h3>Week 23 Day 3 (Intro to CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite DreamWorks movies?</li>
+                        <li>What is your favorite superhero movie or series? (if you have one)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/httyd.jpg"
-                            alt="how to train your dragon"
+                            src="images/avengers.jpeg"
+                            alt="avengers"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
                         <li><span class="type">Exercise</span>The 10 Trials of Basic CSS</li>
+                        <li><span class="type">Exercise</span>Floating Color Palettes</li>
                     </ul>
                 </div>
 
@@ -33,22 +34,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Document Flow and HTML Elements</li>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 3</li>
+                            <li><span class="type">Exercise</span>The 10 Trials of Basic CSS</li>
+                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Text-related CSS Properties</li>
+                            <li><span class="type">Demo</span>Styling Containers</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>The 10 Trials of Basic CSS</li>
+                            <li><span class="type">Exercise</span>Floating Color Palettes</li>
                         </ul>
                     </div>
                 </div>
