--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 4th</h1>
-            <h3>Week 23 Day 5 (Intro to CSS)</h3>
+            <h1>GDWD 105 - Agenda for September 5th</h1>
+            <h3>Week 24 Day 1 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is a blocker that frequently prevents you from starting something?</li>
+                        <li>
+                            Would you rather have a pause or 
+                            rewind button in your life?
+                        </li>
                     </ul>
-                    <div class="img-container more-space light-teal">
-                        <img
-                            src="images/howaboutno.webp"
-                            alt="how about no"
+                    <div class="img-container more-space black">
+                        <img 
+                            src="images/rewind.png"
+                            alt="be kind, rewind"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Bulletin Board</li>
-                        <li><span class="type">Survey</span>Intro to CSS Wrap Up</li>
+                        <li><span class="type">Quiz</span>Intro to CSS</li>
+                        <li><span class="type">Extra Credit</span>Box Framing</li>
                     </ul>
                 </div>
 
@@ -34,24 +37,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Rules Review</li>
-                            <li><span class="type">Project</span>Bulletin Board</li>
+                            <li><span class="type">Quiz</span>Intro to CSS</li>
+                            <li><span class="type">PowerPoint</span>Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Bulletin Board [cont.]</li>
+                            <li><span class="type">Demo</span>Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz Study Tips</span></li>
-                            <li><span class="type">Survey</span>Intro to CSS Wrap Up</li>
-                            <li><span class="type">Project</span>Bulletin Board [cont.]</li>
+                            <li><span class="type">Extra Credit</span>Box Framing</li>
                         </ul>
                     </div>
                 </div>
