--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,21 +7,21 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 5th</h1>
-            <h3>Week 24 Day 1 (Intermediate CSS)</h3>
+            <h1>GDWD 105 - Agenda for September 8th</h1>
+            <h3>Week 24 Day 2 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have a pause or 
-                            rewind button in your life?
+                            Would you rather watch <b>only scary movies</b> or 
+                            <b>only rom-coms</b> for the rest of your life?
                         </li>
                     </ul>
                     <div class="img-container more-space black">
                         <img 
-                            src="images/rewind.png"
-                            alt="be kind, rewind"
+                            src="images/anti-love.jpg"
+                            alt="anti love helmet"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
@@ -37,22 +37,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to CSS</li>
-                            <li><span class="type">PowerPoint</span>Box Model</li>
+                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Box Model</li>
+                            <li><span class="type">Demo</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Box Framing</li>
+                            <li><span class="type">Exercise</span>Limited Sidebar</li>
                         </ul>
                     </div>
                 </div>
