--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -26,8 +26,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Intro to CSS</li>
-                        <li><span class="type">Extra Credit</span>Box Framing</li>
+                        <li><span class="type">Exercise</span>Limited Sidebar</li>
                     </ul>
                 </div>
 
