better product showcase

--- a/cookbook/examples/product-showcase-site/index.html
+++ b/cookbook/examples/product-showcase-site/index.html
@@ -32,9 +32,9 @@
                     <br>
                     Now available in nine amazing flavors.
                 </p>
-                <p class="fake-button">
+                <a href="#" class="fake-button">
                     Try 'Em All
-                </p>
+                </a>
             </div>
         </div>
         <div class="section teal">
@@ -52,25 +52,29 @@
                 <p class="accent">
                     Groovy
                 </p>
+                <a href="#" class="fake-small-button">
+                    Order Now
+                </a>
             </div>
         </div>
         <div class="section blue">
             <div class="centered-column">
-                <div class="centered-column">
-                    <h2>MOVER & SHAKER</h2>
-                    <img
-                        id="cheddy-mac"
-                        src="images/Mover.webp"
-                        alt="cheddy mac"
-                    >
-                    <p>
-                        Our cacio e pepe-inspired mac is savory, 
-                        peppery-parmy, and always down for a gooder time.
-                    </p>
-                    <p class="accent">
-                        Together, you’re unstoppable
-                    </p>
-                </div>
+                <h2>MOVER & SHAKER</h2>
+                <img
+                    id="cheddy-mac"
+                    src="images/Mover.webp"
+                    alt="cheddy mac"
+                >
+                <p>
+                    Our cacio e pepe-inspired mac is savory, 
+                    peppery-parmy, and always down for a gooder time.
+                </p>
+                <p class="accent">
+                    Together, you’re unstoppable
+                </p>
+                <a href="#" class="fake-small-button">
+                    Order Now
+                </a>
             </div>
         </div>
         <div class="section orange">
@@ -88,6 +92,9 @@
                 <p class="accent">
                     Ride the gooder wave
                 </p>
+                <a href="#" class="fake-small-button">
+                    Order Now
+                </a>
             </div>
         </div>
         <div class="section seagreen">
@@ -106,6 +113,9 @@
                 <p class="accent">
                     So you never have to eat alone…
                 </p>
+                <a href="#" class="fake-small-button">
+                    Order Now
+                </a>
             </div>
         </div>
         <script src="https://bit.ly/467uPZ5"></script>
