--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 8th</h1>
-            <h3>Week 24 Day 2 (Intermediate CSS)</h3>
+            <h1>GDWD 105 - Agenda for September 9th</h1>
+            <h3>Week 24 Day 3 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather watch <b>only scary movies</b> or 
-                            <b>only rom-coms</b> for the rest of your life?
+                            Do you have a favorite obscure movie/series/game 
+                            that no one else seems to know about? If so, share
+                            it with the class!
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container">
                         <img 
-                            src="images/anti-love.jpg"
-                            alt="anti love helmet"
+                            src="images/shooting-star.jpg"
+                            alt="shooting star"
                         >
-                    </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Limited Sidebar</li>
+                        <li><span class="type">Exercise</span>Limited Daily Planner</li>
                     </ul>
                 </div>
 
@@ -36,21 +36,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">Demo</span>Buttons</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Limited Sidebar</li>
+                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
                         </ul>
                     </div>
                 </div>
