--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -15,8 +15,7 @@
                     <ul>
                         <li>
                             Do you have a favorite obscure movie/series/game 
-                            that no one else seems to know about? If so, share
-                            it with the class!
+                            that no one else seems to know about?
                         </li>
                     </ul>
                     <div class="img-container">
@@ -24,9 +23,10 @@
                             src="images/shooting-star.jpg"
                             alt="shooting star"
                         >
+                    </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Limited Daily Planner</li>
+                        <li><span class="type">Exercise</span>Limited Sidebar</li>
                     </ul>
                 </div>
 
@@ -36,22 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
-                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
+                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Buttons</li>
+                            <li><span class="type">Demo</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
+                            <li><span class="type">Exercise</span>Limited Sidebar</li>
                         </ul>
                     </div>
                 </div>
