--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -26,7 +26,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Limited Sidebar</li>
+                        <li><span class="type">Exercise</span>Limited Daily Planner</li>
                     </ul>
                 </div>
 
@@ -36,21 +36,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Combining Selectors</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">Demo</span>Buttons</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Limited Sidebar</li>
+                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
                         </ul>
                     </div>
                 </div>
