--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 9th</h1>
-            <h3>Week 24 Day 3 (Intermediate CSS)</h3>
+            <h1>GDWD 105 - Agenda for September 10th</h1>
+            <h3>Week 24 Day 4 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>
-                            Do you have a favorite obscure movie/series/game 
-                            that no one else seems to know about?
-                        </li>
+                        Would you rather be able to:
+                        <ul>
+                            <li>eat anything you want in one meal a day for perfect nutrition?</li>
+                            <li>sleep for 1 hour and be perfectly rested?
+                        </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/shooting-star.jpg"
-                            alt="shooting star"
+                            src="images/power-nap.jpeg"
+                            alt="power nap"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
                         <li><span class="type">Exercise</span>Limited Daily Planner</li>
+                        <li><span class="type">Exercise</span>Blog Post (Code)</li>
                     </ul>
                 </div>
 
@@ -36,22 +38,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
-                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
+                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Buttons</li>
+                            <li><span class="type">Demo</span>Single Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
+                            <li><span class="type">Exercise</span>Blog Post (Code)</li>
                         </ul>
                     </div>
                 </div>
