--- a/cookbook/examples/side-by-side-recipes/index.html
+++ b/cookbook/examples/side-by-side-recipes/index.html
@@ -48,18 +48,24 @@
             <h2>YOU MIGHT ALSO LIKE</h2>
             <div id="three-cards" class="side-by-side">
                 <div class="sorta-card">
-                    <img src="images/recipe1.jpg" alt="recipe1">
-                    <h4>FRENCH TACOS (BUT NOT REALLY TACOS)</h4>
+                    <a href="#">
+                        <img src="images/recipe1.jpg" alt="recipe1">
+                        <h4>FRENCH TACOS (BUT NOT REALLY TACOS)</h4>
+                    </a>
                 </div>
                 <div class="sorta-card">
-                    <img src="images/recipe2.jpg" alt="recipe2">
-                    <h4>CHICKEN SHAWARMA POTATO BOWLS</h4>
+                    <a href="#">
+                        <img src="images/recipe2.jpg" alt="recipe2">
+                        <h4>CHICKEN SHAWARMA POTATO BOWLS</h4>
+                    </a>
                 </div>
                 <div class="sorta-card">
-                    <img src="images/recipe3.webp" alt="recipe3">
-                    <h4>
-                        LOADED SWEET POTATOES WITH SPICED BEEF AND HOT HONEY
-                    </h4>
+                    <a href="#">
+                        <img src="images/recipe3.webp" alt="recipe3">
+                        <h4>
+                            LOADED SWEET POTATOES WITH SPICED BEEF AND HOT HONEY
+                        </h4>
+                    </a>
                 </div>
             </div>
         </div>
