--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 10th</h1>
-            <h3>Week 24 Day 4 (Intermediate CSS)</h3>
+            <h1>GDWD 105 - Agenda for September 11th</h1>
+            <h3>Week 24 Day 5 (Intermediate CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        Would you rather be able to:
+                        Would you rather:
                         <ul>
-                            <li>eat anything you want in one meal a day for perfect nutrition?</li>
-                            <li>sleep for 1 hour and be perfectly rested?
+                            <li>spend a week trapped <b>outside</b> of your home?</li>
+                            <li>spend a week trapped <b>inside</b> of your home?</li>
                         </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/power-nap.jpeg"
-                            alt="power nap"
+                            src="images/great-indoors.webp"
+                            alt="the great indoors"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Limited Daily Planner</li>
-                        <li><span class="type">Exercise</span>Blog Post (Code)</li>
+                        <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
+                        <li><span class="type">Project</span>Product Showcase Site</li>
                     </ul>
                 </div>
 
@@ -38,22 +38,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Limited Daily Planner</li>
-                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column</li>
+                            <li><span class="type">Demo</span>Advanced Single Column Layouts</li>
+                            <li><span class="type">Demo</span>Google Fonts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Single Column Layouts</li>
+                            <li><span class="type">Project</span>Product Showcase Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Blog Post (Code)</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Tips</li>
+                            <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
+                            <li><span class="type">Project</span>Product Showcase Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
