--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,29 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 11th</h1>
-            <h3>Week 24 Day 5 (Intermediate CSS)</h3>
+            <h1>GDWD 105 - Agenda for September 12th</h1>
+            <h3>Week 25 Day 1 (Advanced CSS - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         Would you rather:
                         <ul>
-                            <li>spend a week trapped <b>outside</b> of your home?</li>
-                            <li>spend a week trapped <b>inside</b> of your home?</li>
+                            <li>get an extra hour in every day, or</li>
+                            <li>get an extra day every 24 days?</li>
                         </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/great-indoors.webp"
-                            alt="the great indoors"
+                            src="images/melty-time.webp"
+                            alt="melty time"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
+                        <li><span class="type">Quiz</span>Intermediate CSS</li>
                         <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
-                        <li><span class="type">Project</span>Product Showcase Site</li>
+                        <li><span class="type">Extra Credit</span>Three Profile Cards</li>
                     </ul>
                 </div>
 
@@ -38,24 +39,25 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Advanced Single Column Layouts</li>
-                            <li><span class="type">Demo</span>Google Fonts</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints CSS</li>
+                            <li><span class="type">Quiz</span>Intermediate CSS</li>
+                            <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Product Showcase Site</li>
+                            <li><span class="type">PowerPoint</span>Content Layouts - Cards</li>
+                            <li><span class="type">PowerPoint</span>Flexbox - Part 1</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Tips</li>
-                            <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
-                            <li><span class="type">Project</span>Product Showcase Site [cont.]</li>
+                            <li><span class="type">Demo</span>Three Cards</li>
+                            <li><span class="type">Extra Credit</span>Three Profile Cards</li>
                         </ul>
                     </div>
                 </div>
