--- a/cookbook/examples/mebay-product-page-v3-fancy/index.html
+++ b/cookbook/examples/mebay-product-page-v3-fancy/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>mebay Product Page (Exercise)</title>
+        <title>mebay Product Page | Project Example</title>
         <link 
             rel="stylesheet" 
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
@@ -21,10 +21,11 @@
         -->
     </head>
     <body>
-        <div id="grid-layout">
-            <div id="header">
-                <h1><span class="m">m</span><span class="e">e</span><span class="b">b</span><span class="a">a</span><span class="y">y</span></h1>
-            </div>
+        <div id="header">
+            <h1><span class="m">m</span><span class="e">e</span><span class="b">b</span><span class="a">a</span><span class="y">y</span></h1>
+        </div>
+        <div id="three-columns">
+            
             <div id="thumbnails">
                 <div class="thumbnail-container selected">
                     <img
@@ -63,13 +64,11 @@
                 </div>
             </div>
             <div id="featured">
-                <div class="featured-image-container">
-                    <img
-                        class="thumbnail"
-                        src="images/korok-main.webp"
-                        alt="korok main image"
-                    >
-                </div>
+                <img
+                    class="thumbnail"
+                    src="images/korok-main.webp"
+                    alt="korok main image"
+                >
             </div>
             <div id="product-info">
                 <h1>
