--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,29 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 12th</h1>
-            <h3>Week 25 Day 1 (Advanced CSS - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for September 15th</h1>
+            <h3>Week 25 Day 2 (Advanced CSS - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        Would you rather:
-                        <ul>
-                            <li>get an extra hour in every day, or</li>
-                            <li>get an extra day every 24 days?</li>
-                        </ul>
+                        <li>
+                            If you could have any creature (either real or fantastical)
+                            as a pet, what would you choose?
+                        </li>
+
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/melty-time.webp"
-                            alt="melty time"
+                            src="images/alt-animal-names.webp"
+                            alt="true names"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Intermediate CSS</li>
-                        <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
-                        <li><span class="type">Extra Credit</span>Three Profile Cards</li>
+                        <li><span class="type">Exercise</span>Side by Side Recipes</li>
                     </ul>
                 </div>
 
@@ -39,25 +37,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints CSS</li>
-                            <li><span class="type">Quiz</span>Intermediate CSS</li>
-                            <li><span class="type">Survey</span>Intermediate CSS Wrap Up</li>
+                            <li><span class="type">PowerPoint</span>Content Layouts - Side by Side</li>
+                            <li><span class="type">Demo</span>Media & Text</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Content Layouts - Cards</li>
-                            <li><span class="type">PowerPoint</span>Flexbox - Part 1</li>
+                            <li><span class="type">Demo</span>Media & Text [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Three Cards</li>
-                            <li><span class="type">Extra Credit</span>Three Profile Cards</li>
+                            <li><span class="type">Exercise</span>Side by Side Recipes</li>
                         </ul>
                     </div>
                 </div>
