--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 15th</h1>
-            <h3>Week 25 Day 2 (Advanced CSS - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for September 16th</h1>
+            <h3>Week 25 Day 3 (Advanced CSS - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you could have any creature (either real or fantastical)
-                            as a pet, what would you choose?
+                            Would you rather have the power of flight
+                            or the power to levitate objects?
                         </li>
 
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/alt-animal-names.webp"
-                            alt="true names"
+                            src="images/broom-cats.jpg"
+                            alt="broom cats"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Side by Side Recipes</li>
+                        <li><span class="type">Exercise</span>Site Scaffolding</li>
                     </ul>
                 </div>
 
@@ -37,22 +37,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Content Layouts - Side by Side</li>
-                            <li><span class="type">Demo</span>Media & Text</li>
+                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
+                            <li><span class="type">Demo</span>Basic Navbars</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Media & Text [cont.]</li>
+                            <li><span class="type">Demo</span>Basic Navbars [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Side by Side Recipes</li>
+                            <li><span class="type">Exercise</span>Site Scaffolding</li>
                         </ul>
                     </div>
                 </div>
