--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,22 +7,22 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 16th</h1>
-            <h3>Week 25 Day 3 (Advanced CSS - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for September 17th</h1>
+            <h3>Week 25 Day 4 (Advanced CSS - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have the power of flight
-                            or the power to levitate objects?
+                            Would you rather have: a bag that could hold anything, or
+                            your own pocket-dimension accessed via suitcase?
                         </li>
 
                     </ul>
                     <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/broom-cats.jpg"
-                            alt="broom cats"
+                            src="images/hoarder-fox.webp"
+                            alt="hoarder fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
@@ -34,25 +34,33 @@
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Warm-up (6pm-6:10pm)</h3>
+                        <ul>
+                            <li>
+                                <span class="type">Video</span>
+                                <a href="https://www.youtube.com/watch?v=XfS-bZ69p0E">
+                                    Constitution Day
+                                </a>
+                            </li>
+                        </ul>
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
-                            <li><span class="type">Demo</span>Basic Navbars</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Two Columns</li>
+                            <li><span class="type">Demo</span>Two Columns w/ Sidebar</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Basic Navbars [cont.]</li>
+                            <li><span class="type">Demo</span>Two Columns w/ Sidebar (Fancy)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Site Scaffolding</li>
+                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
                         </ul>
                     </div>
                 </div>
