--- a/cookbook/recipes-cheatsheet.html
+++ b/cookbook/recipes-cheatsheet.html
@@ -84,6 +84,39 @@
             <h2>Legend</h2>
             <div class="legend container">Container</div>
             <div class="legend item">Item</div>
+
+            <h2 id="centered-single-column">
+                Centered Single Column Layout Options
+            </h2>
+            <h4>Margin Auto</h4>
+            <div class="container">
+                <div class="item column-centered">
+                    <div class="code">
+                        width: 1000px;
+                        <br>
+                        margin: 48px auto;
+                    </div>
+                </div>
+            </div>
+
+            <!-- <h4>Grid with Gutters</h4>
+            <div class="container">
+                <div class="code">
+                    display: grid;
+                    <br>
+                    grid-template-columns: 1fr 1000px 1fr;
+                    <br>
+                    grid-template-areas: ". content .";
+                </div>
+                <div class="grid-with-gutters">
+                    <div class="item grid-column">
+                        <div class="code">
+                            grid-area: content;
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+
             <h2 id="side-by-side">Side by Side Layout Options</h2>
             <h4>Inline-Block</h4>
             <div>
@@ -122,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <h4>Grid</h4>
+            <!-- <h4>Grid</h4>
             <div class="container">
                 <div class="code">
                     display: grid;
@@ -137,7 +170,7 @@
                         
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <h2 id="center-alignment">Center Alignment Options</h2>
             <h4>Text-Align</h4>
@@ -188,37 +221,6 @@
                 </div>
             </div>
 
-            <h2 id="centered-single-column">
-                Centered Single Column Layout Options
-            </h2>
-            <h4>Margin Auto</h4>
-            <div class="container">
-                <div class="item column-centered">
-                    <div class="code">
-                        width: 1000px;
-                        <br>
-                        margin: 48px auto;
-                    </div>
-                </div>
-            </div>
-
-            <h4>Grid with Gutters</h4>
-            <div class="container">
-                <div class="code">
-                    display: grid;
-                    <br>
-                    grid-template-columns: 1fr 1000px 1fr;
-                    <br>
-                    grid-template-areas: ". content .";
-                </div>
-                <div class="grid-with-gutters">
-                    <div class="item grid-column">
-                        <div class="code">
-                            grid-area: content;
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <h2>Positioning Options</h2>
             <h4>Apart</h4>
