--- a/cookbook/recipes-cheatsheet.html
+++ b/cookbook/recipes-cheatsheet.html
@@ -86,7 +86,7 @@
             <div class="legend item">Item</div>
 
             <h2 id="centered-single-column">
-                Centered Single Column Layout Options
+                Centered Page Layout Options
             </h2>
             <h4>Margin Auto</h4>
             <div class="container">
