--- a/cookbook/recipes-cheatsheet.html
+++ b/cookbook/recipes-cheatsheet.html
@@ -92,7 +92,7 @@
             <div class="container">
                 <div class="item column-centered">
                     <div class="code">
-                        width: 1000px;
+                        max-width: 1000px;
                         <br>
                         margin: 48px auto;
                     </div>
