--- a/cookbook/examples/adventure/choice2-deeper.html
+++ b/cookbook/examples/adventure/choice2-deeper.html
@@ -11,7 +11,7 @@
         <p>
             Who knew that going deeper into the dark forest would be a good 
             idea?  Because not long after, the trees give way to a vast 
-            golden plain, leading up to an imposing craggy mountain.
+            golden plain, leading up to an imposing, craggy mountain.
         </p>
         <p>
             You pass through the plains, the flourishing vegatation giving 
