--- a/cookbook/examples/adventure/choice3-attack.html
+++ b/cookbook/examples/adventure/choice3-attack.html
@@ -16,7 +16,7 @@
         <p>
             Before you can even take a few steps, the dragon opens its 
             maw and breathes out a horrifying blast of fire that incinerates 
-            you in seconds.
+            you in an instant.
         </p>
         <p>
             Well, at least you weren't the only one here who met...
