--- a/cookbook/examples/adventure/choice3-crone.html
+++ b/cookbook/examples/adventure/choice3-crone.html
@@ -28,7 +28,7 @@
         <p>
             Over time, you clear off the vines off the home, pull the weeds 
             from the yard, and help the old woman revitalize her garden.
-            You two live together in quiet peaceful days, away from the strife
+            You two live together in quiet, peaceful days, away from the strife
             of the kingdom, until eventually you reach...
         </p>
         
