--- a/cookbook/examples/adventure/index.html
+++ b/cookbook/examples/adventure/index.html
@@ -18,7 +18,7 @@
         <p>What will you do?</p>
 
         <a href="choice1-darkforest.html">
-            <img src="images/choice1-darkforest.jpg" alt="dark forest" width="500">
+            <img src="images/darkforest.jpg" alt="dark forest" width="500">
         </a>
         <br>
         <a href="choice1-darkforest.html">
