--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,8 +8,8 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 13th</h1>
-            <h3>Week 38 Day 5 (Portfolio Projects Week 1)</h3>
+            <h1>GDWD 105 - Agenda for October 14th</h1>
+            <h3>Week 39 Day 1 (Portfolio Projects Week 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
@@ -28,7 +28,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
+                        <li><span class="type">Discussion Post</span>Week 2 Project Selection</li>
                     </ul>
                 </div>
 
@@ -37,21 +37,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
+                            <li><span class="type">Kahoot</span>Final Exam Review #1</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
+                            <li><span class="type">Heads Up</span>Career Services Package Guidelines</li>
+                            <li><span class="type">Discussion Post</span>Week 2 Project Selection</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
+                            <li><span class="type">Discussion Post</span>Week 2 Project Selection</li>
                         </ul>
                     </div>
                 </div>
