6031 W7D4 agenda (night) [bryan missing]

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (6027 Cohort)</title>
+        <title>GDWD 102 AGENDA (6031 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 2nd</h1>
-            <h3>Week 27 Day 5 (Career Services)</h3>
+            <h1>GDWD 102 - Agenda for December 8th</h1>
+            <h3>Week 7 Day 4 (Layers of Depth)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Which of your remaining classes are you most excited 
-                            for: Motion Graphics (106), Layout Design and Print 
-                            (107), or Portfolio (108)?
+                            What is your favorite Christmas movie?
                         </li>
                     </ul>
-                    <div class="img-container more-space final-black">
+                    <div class="img-container ">
                         <img 
-                            src="images/finalday.jpg"
+                            src="images/santa-paws.webp"
                             alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>105 End of Course Survey</li>
-                        <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                        <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                        <li><span class="type">Exercise</span>Drop Shadow Worksheet</li>
+                        <li><span class="type">Critique</span>National Parks Poster Critique</li>
                     </ul>
                 </div>
 
@@ -39,23 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>105 End of Course Survey</li>
-                            <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                            <li><span class="type">Demo</span>Drop Shadows</li>
                         </ul>
                     </div>
-                    <h3 class="centered">Small Break (10min)</h3>
+                    <!-- <h3 class="centered">Small Break (10min)</h3> -->
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
+                            <li><span class="type">Exercise</span>Drop Shadow Worksheet</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
+                            <li><span class="type">Critique</span>National Parks Poster Critique</li>
                         </ul>
                     </div>
                 </div>
