--- a/cookbook/seasonings/transition.html
+++ b/cookbook/seasonings/transition.html
@@ -69,8 +69,8 @@
         <h5>Pseudo-classes</h5>
         <p>
             <b>Pseudo-classes</b> are special keywords that can be
-            added in CSS to define a CSS Rule targeting an HTML
-            Element in a certain state.
+            added in CSS selectors to define a CSS Rule targeting 
+            an HTML Element in a certain state.
         </p>
         <p>
             They have a bit of a funny syntax using the colon ( : ), 
@@ -163,7 +163,7 @@
             needed above: the name of the property we want to 
             animate (the color property) and duration we want 
             the animation to have (0.5s, or in other words, 
-            a half second).
+            a half second), each separated by a space.
         </p>
 
         <p class="warning">
