--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 108 AGENDA (6026 Cohort)</title>
+        <title>GDWD 108 AGENDA (2031 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for October 16th</h1>
-            <h3>Week 39 Day 3 (Portfolio Projects Week 2)</h3>
+            <h1>GDWD 105 - Agenda for December 18th</h1>
+            <h3>Week 19 Day 1 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is your favorite Halloween candy?
-
+                            How do you feel about the idea of coding?
                         </li>
                     </ul>
-                    <div class="img-container final-black">
+                    <div class="img-container ">
                         <img 
-                            src="images/halloween_cats.webp"
-                            alt="final day"
+                            src="images/anxious.webp"
+                            alt="things that make me anxious"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
                     </ul>
                 </div>
 
@@ -36,22 +35,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Final Exam Review #3</li>
-                            <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
+                            <li><span class="type">Resources</span>FIRST Policies Review and Course Overview</li>
+                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
+                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
+                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Dashboard</li>
+                            <li><span class="type">Demo</span>WordPress Dashboard, Themes, and Pages vs. Posts</li>
                         </ul>
                     </div>
                 </div>
