--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -46,6 +46,10 @@
                             <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
                         </ul>
                     </div>
+                    
+                </div>
+
+                <div id="agenda2">
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
