--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -24,13 +24,10 @@
                             alt="things that make me anxious"
                         >
                     </div>
-                    <h2>Deliverables for Today</h2>
-                    <ul>
-                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
-                    </ul>
                 </div>
 
                 <div id="agenda">
+                    <h2>Before Lunch</h2>
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
@@ -46,11 +43,12 @@
                             <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
                         </ul>
                     </div>
+                    <h3 class="centered">Lunch Break (45min)</h3>
                     
                 </div>
 
                 <div id="agenda2">
-                    <h3 class="centered">Lunch Break (45min)</h3>
+                    <h2>After Lunch</h2>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
@@ -58,6 +56,10 @@
                             <li><span class="type">Demo</span>WordPress Dashboard, Themes, and Pages vs. Posts</li>
                         </ul>
                     </div>
+                    <h2>Deliverables for Today</h2>
+                    <ul>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                    </ul>
                 </div>
             </div>
         </div>
